[package]
name = "shell"
version = "0.1.0"
authors = ["Klejdi Sinollari klejdi.ks@gmail.com"]
edition = "2018"
description = "A tool to interface with unix-based OS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static="1.4.0"
